objects/IDD_Junction__c.object
<CustomObject>
    <fields>
        <fullName>Document_Owner__c</fullName>
        <description>Responsible Party for Document upload</description>
        <label>Document Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPWR Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunpower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permitting Partner</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Upload_Location__c</fullName>
        <label>Document Upload Location</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Project</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installation_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated &apos;Installation Model&apos; Id.</description>
        <inlineHelpText>Not needed if Partner Account is populated</inlineHelpText>
        <label>Installation Model</label>
        <referenceTo>Installation_Model__c</referenceTo>
        <relationshipLabel>IDD Junctions</relationshipLabel>
        <relationshipName>IDD_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Document_Data__c</fullName>
        <description>Associated &apos;Invoice Document Data&apos; Id.</description>
        <label>Invoice Document Data</label>
        <referenceTo>Invoice_Document_Data__c</referenceTo>
        <relationshipLabel>IDD Junctions</relationshipLabel>
        <relationshipName>IDD_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <description>The type of Invoice to be created.</description>
        <label>Invoice Type</label>
        <picklist>
            <picklistValues>
                <fullName>Interconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Origination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permit Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SREC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populate this field when linking partner specific Invoice Document Data</description>
        <inlineHelpText>Not needed if Installation Model is populated</inlineHelpText>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IDD Junctions</relationshipLabel>
        <relationshipName>IDD_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_for_Lease_Contract_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the &apos;Invoice Document&apos; Required for Lease Contract Creation?</description>
        <label>Required for Lease Contract Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shared_With__c</fullName>
        <description>Other Parties the document can be shared with</description>
        <label>Shared With</label>
        <picklist>
            <picklistValues>
                <fullName>DRIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State the Installation Model and Invoice Document Data intersection is applicable to.</description>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>System_Type__c</fullName>
        <description>The type of System current</description>
        <label>System Type</label>
        <picklist>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>iSupplier__c</fullName>
        <inlineHelpText>Yes means iSupplier accounts only
No means exclude iSupplier account
None means all accounts.</inlineHelpText>
        <label>iSupplier</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>IDD Junction</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>IDD Junction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IDD Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>